Change background colors and text color for aesthetic appeal and fix spacing issues on larger screens

--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 header {
-    background-color: #87b0e7;
+    background-color: rgb(78, 76, 76);
     padding: .25rem;
 
 }
@@ -20,6 +20,7 @@ h1 {
     font-size: larger;
     padding-left: 1rem;
     text-transform: uppercase;
+    color:#aad2db;
 }
 
 h2 {
@@ -35,12 +36,10 @@ h3 {
     text-transform: uppercase;
 }
 
-p,
-label {
+p,label {
     font-weight: 500;
     font-size: small;
     font-style: italic;
-    /* padding-left: 1rem; */
 }
 
 /* Navigation Styles */
@@ -51,19 +50,21 @@ label {
     list-style-type: none;
     line-height: 20px;
     margin-left: -24px;
+    color:white;
 }
 
 #menu a {
-    text-decoration: none;
+    /* text-decoration: none; */
+    color:white;
 }
 
 .active {
-    color: blueviolet;
+    color:red;
 }
 
 /* Main Section Styles */
 main {
-    background-color: rgba(162, 241, 162, 0.945);
+    background-color:#aad2db ;
     padding: .25rem;
 }
 
@@ -101,8 +102,12 @@ main {
 /* Footer Styles */
 
 footer {
-    background-color: aqua;
+    background-color: rgb(78, 76, 76);
     padding: .25rem 0 2rem 0;
+}
+
+footer {
+    color:white;
 }
 
 #footer-container {
@@ -117,6 +122,12 @@ footer {
 
 /* Media query: tablets and larger (576px and up) */
 @media screen and (min-width: 576px) {
+    nav li {
+        display: inline;
+        padding-right: 1rem;
+        font-size: small;
+    }
+
     #about-text ul {
         margin-left:10rem;       
     }
@@ -131,15 +142,6 @@ footer {
 
     h1 {
         font-size: x-large;
-    }
-
-    /* nav {
-        background-color:white;
-    } */
-    nav li {
-        display: inline;
-        padding-right: 1rem;
-        font-size: small;
     }
 
     .flex-container {
